--- a/templates/johnd.html
+++ b/templates/johnd.html
@@ -3,6 +3,12 @@
     <h5>John Doe</h5>
     <small>July 24, 2023</small>
 </li>
+    <style>
+    .list-group-item.active, .btn-primary {
+        background-color: green;
+        border-color: green;
+    }
+    </style>
 <div class="collapse" id="john_doe_conversation">
     <ul class="list-group">
         <li class="list-group-item">
