--- a/templates/login.html
+++ b/templates/login.html
@@ -16,6 +16,10 @@
         .btn-back:hover {
             background-color: #0056b3;
         }
+        .list-group-item.active, .btn-primary {
+            background-color: green;
+            border-color: green;
+        }
     </style>
 </head>
 <body>
