--- a/templates/messages.html
+++ b/templates/messages.html
@@ -11,6 +11,10 @@
         .collapsed-conversation {
             display: none;
         }
+        .list-group-item.active, .btn-primary {
+            background-color: green;
+            border-color: green;
+        }
     </style>
 </head>
 <body>
