--- a/templates/settings.html
+++ b/templates/settings.html
@@ -4,6 +4,12 @@
     <title>GreenSpace - Settings</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
+    <style>
+    .list-group-item.active, .btn-primary {
+        background-color: green;
+        border-color: green;
+    }
+    </style>
 <body>
     <div class="container-fluid">
         <div class="row">
