--- a/templates/clubs/surf_club.html
+++ b/templates/clubs/surf_club.html
@@ -27,6 +27,10 @@
             border-radius: 5px;
             background-color: #f8f9fa;
         }
+        .list-group-item.active, .btn-primary {
+            background-color: green;
+            border-color: green;
+        }
     </style>
 </head>
 <body>
