--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -17,6 +17,10 @@
         .notification-card p {
             margin-bottom: 0;
         }
+        .list-group-item.active, .btn-primary {
+            background-color: green;
+            border-color: green;
+        }
     </style>
 </head>
 <body>
