--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,6 +3,12 @@
 <head>
     <title>GreenSpace - Sign Up</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <style>
+    .list-group-item.active, .btn-primary {
+        background-color: green;
+        border-color: green;
+    }
+    </style>
 </head>
 <body>
     <div class="container-fluid">
@@ -44,6 +50,10 @@
                             <div class="form-group">
                                 <label for="password">Password</label>
                                 <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="agreement" required>
+                                <label class="form-check-label" for="agreement">I agree that everything I post or comment is tied back to my school account and disciplinary measures will be taken if needed.</label>
                             </div>
                             <input class="btn btn-primary btn-block" type="submit" value="Sign Up">
                         </form>
